--- a/_posts/2022-01-09-图算法基础知识：图论相关基础概念.md
+++ b/_posts/2022-01-09-图算法基础知识：图论相关基础概念.md
@@ -1,5 +1,3 @@
-[toc]
-
 > 本文主要介绍图算法相关概念术语和图论的基础知识。
 
 # 图的类型和结构
@@ -8,8 +6,8 @@
 简单图：节点对之间只有一个关系；
 多重图：节点对之间可以存在多个关系；
 
-![简单图](../assets/images/up/20210109/2022-01-09-图算法基础知识：图论相关基础概念.md.drawio.png)
-![多重图](../assets/images/up/20210109/2022-01-09-图算法基础知识：图论相关基础概念.md.drawio2.png)
+![简单图](../assets/images/up/20210109/1.png)
+![多重图](../assets/images/up/202101092.png)
 
 图可以呈现多种形状，比较具有代表性的网络结果如下：
 1. 随机网络
@@ -37,11 +35,11 @@
 ## 连通图与非联通图
 如果图中所有节点间都存在路径，则该图是连通图，否则是非连通图，其中的孤立的每部分都称作**分量**or**簇**。
 
-![连通图与非连通图](../assets/images/up/20210109/2022-01-09-图算法基础知识：图论相关基础概念.md.drawio3.png)
+![连通图与非连通图](../assets/images/up/20210109/3.png)
 
 ## 加权图与无权图
 无权图没有为节点或边关系赋予权重值。对于加权图，这些权重值可以代表多种含义，重要程度、距离、相似度等等。
 
-![无权图与加权图](../assets/images/up/20210109/2022-01-09-图算法基础知识：图论相关基础概念.md.drawio4.png)
+![无权图与加权图](../assets/images/up/20210109/4.png)
 
 ## 无向图和有向图
