--- a/_posts/2021-10-19-MOLGENGO.md
+++ b/_posts/2021-10-19-MOLGENGO.md
@@ -5,7 +5,7 @@ title:
 authors: Beomchang Kang, Chaok Seok* and Juyong Lee*
 journal: ACS Omega
 categories:
-  - Others
+  - others
 tags:
   - optical property prediction
 redirect_to: https://doi.org/10.1021/acsomega.1c04347
