Italicize et al automatically

--- a/_posts/2018-07-02-casp11_12.md
+++ b/_posts/2018-07-02-casp11_12.md
@@ -2,7 +2,7 @@
 title:
   "An analysis and evaluation of the WeFold collaborative for protein structure
   prediction and its pipelines in CASP11 and CASP12"
-authors: Chen Keasar* <em>et al.</em> (Lim Heo, Gyu Rie Lee and Chaok Seok)
+authors: Chen Keasar* et al. (Lim Heo, Gyu Rie Lee and Chaok Seok)
 journal: Scientific Reports
 categories:
   - Applications and collaborations
