--- a/_posts/2019-12-01-casp13-capri.md
+++ b/_posts/2019-12-01-casp13-capri.md
@@ -3,7 +3,7 @@ title:
   "Blind prediction of homo- and hetero-protein complexes: The CASP13-CAPRI
   experiment"
 authors:
-  Marc F. Lensink* <em>et al.</em> (Minkyung Baek, Taeyong Park, Hyeonuk Woo and
+  Marc F. Lensink* et al. (Minkyung Baek, Taeyong Park, Hyeonuk Woo and
   Chaok Seok)
 journal: "Proteins: Structure, Function, and Bioinformatics"
 categories:
