--- a/_posts/2021-12-01-casp14-capri.md
+++ b/_posts/2021-12-01-casp14-capri.md
@@ -3,7 +3,7 @@ title:
   "Prediction of protein assemblies, the next frontier: The CASP14-CAPRI
   experiment"
 authors:
-  Marc F. Lensink* <em>et al.</em> (Taeyong Park, Hyeonuk Woo, Jinsol Yang,
+  Marc F. Lensink* et al. (Taeyong Park, Hyeonuk Woo, Jinsol Yang,
   Sohee Kwon, Jonghun Won and Chaok Seok)
 journal: "Proteins: Structure, Function, and Bioinformatics"
 categories:
