--- a/_posts/2022-03-05-支付宝金融风控-基于异构信息网络的恶意账号检测.md
+++ b/_posts/2022-03-05-支付宝金融风控-基于异构信息网络的恶意账号检测.md
@@ -19,11 +19,19 @@
 
 GNNs可以用来预测一个图中节点或者边的类别。新的研究也有将GNNs作为一种基础神经网络来递归处理更一般的图，比如循环图、有向图、无向图。通过将卷积操作泛化到图上的方法的结果令人兴奋。一个无向图 $\mathcal{G} =\{\mathcal{V},\mathcal{E}\}$，所有$N$个节点$v_i \in \mathcal{V}$，边$(v_i,v_j) \in \mathcal{E}$，节点特征$X \in R^{N,D}$和邻接矩阵$A \in R^{N \times N}$，卷积层如下所示：
 
+![卷积层](/up/20220305/1.png)
+
 事实上，GCN训练的过程可以看做是学习一个函数$f(X,A)$通过节点的邻居信息来生成节点$x_i$的向量表示。前人的研究显示，我们总能找到一个等式将给定的定点等式转换到另一个特征空间。因此，我们可以直接用神经网络在特定的嵌入空间$h$中学习图模型并直接通过相关的连接优化函数$f$。这种方式是变量限制在一个指数函数范围，效果甚至比传统模型更好。即学习一个迭代式的邻居聚合函数：
 ​
+![聚合函数](/up/20220305/2.png)
+
 这里的$f(\cdot)$是一个参数化的非线性转换函数。该领域很多关于接收域的研究是有道理的，类比于图片中像素点有8个相邻的像素点，图中的节点有更多邻居信息。
-Node Embedding
+
+### Node Embedding
+
 第二部分技术主要是图表示学习，学习节点的富含图结构信息的表示。有直接使用邻接矩阵的、$t$ 阶邻接矩阵或者是使用随机游走来抽取高阶信息。基本上所有方法都是在优化一个经验损失$\mathcal{L}$:
+
+![损失函数](/up/20220305/3.png)
 
 $f_{enc}$  是编码器， $f_{dec}$ 是解码器， $f_{\mathcal{G}}$ 是关系对近似函数；$ \mathcal{l}$ 是来衡量$ f_{dec} $重构能力的损失函数，$ f_{enc} $近似于用户指定的组对儿的 $f_{\mathcal{G}} $值。
 这些方法都是无监督学习的算法，表示向量放入分类器才可以得到最终的预测。此外，基于随机游走的近似度量在这个领域得到了广泛应用，文中也进行了相关的实验。
@@ -35,13 +43,78 @@ $f_{enc}$  是编码器， $f_{dec}$ 是解码器， $f_{\mathcal{G}}$ 是关系
 ### Data Analysis
 
 首先看一下支付宝真实场景下的『设备聚集性』和『活动聚集性』。
+
 『设备聚集性』：一个账号对应多个设备，或一小撮设备却被一大批账号登录，这些账号都是可疑的。
 『行为聚集性』：一批账号有相同的批量行为。
+
 下图是支付宝7天构建的账号设备图谱，显示出了上述两种模式特点。
 
+![设备聚集性和行为聚集性](/up/20220305/4.png)
+
 ### A Motivation: Subgraph Components
+
 设备聚集和行为聚集的特点使得需要从图的角度来考虑恶意账号检测的问题。
+
 第一步的尝试是一种称作关联子图的方法。最初的想法是构建一个账号图谱，寄希望于边关系可以联系出一众的账号。关联子图的方法主要由三部分构成：
+
 1. 假设有一个图$ \mathcal{G}$ ，其节点$ N $包含账号和设备，边关系集合$ M $则是指账号$ i$ 在一段时间内在设备$ j $上的登录行为。基于此，可以构建一个包含账号节点的同构图，图中的一条边表示账号$ i $和账号$ i'$ 在一个时间段内使用了同一设备登录。因此，图$ \mathcal{G}$ 中的关联子图可以看做属于同一个组的账号。其中越大的团伙，其潜在的作弊风险也就越高。但是，实际使用中会自然而然的存在一定的噪声数据，比如不同账号使用相同IP登录是很正常的。
 2. 进一步减少边关系。通常，一个团伙的账号往往会活跃在某个特定的时间点。为了衡量一个子图$ \mathcal{G}^{a}$ 中两个账号的相似性，通过把账号的行为使用一组向量来描述，即$ x_i=[x_{i,1}, ..., x_{i,p}]^T, (p=24)$ ，每个$ x_{i,t}$ 表示账号在第$ t $小时的行为频率。就可以通过向量内积来衡量两个账号的相似性。因此，可以进一步删除那些边关系两端节点相似性小于$ \theta $的，当然，这个$ \theta $是作为超参数来控制$ \mathcal{G}^{a}$ 的稀疏程度的。
 3. 最后，可以通过账号所属子图的规模来对其进行打分。确定超参数$ \theta $，需要不断微调得到。
+
+尽管这个方法思想十分简单，但是可以准确发现大的恶意账号团伙，但是对于小规模子图的性能却很不理想。
+
+是不是有一些更智能的方法来识别恶意账号呢？不同于传统的方式，首先抽取特征，然后来学习一个分类函数。是否可以直接学习一个同时利用图的拓扑结构和特征的函数$f(x, \mathcal{G})$呢？
+
+从上述的方法中发现，第一点是其过程就是定义一个打分函数，基于节点之间的连接关系聚合得到，拓扑结构和节点特征都有照顾到；再者是，将账号-设备关系图转换为账号-账号图会失去原始图结构中的一些信息。本文提出模型如下。
+
+## Heterogeneous Graph Construction
+
+定义异构图$\mathcal{G}=(\mathcal{V},\mathcal{E})$，节点集合$N$包含账号和设备，边集合$M$中$\{(i, j)\}$表示账号$i$在设备$j$上登录。这样可以产生一个邻接矩阵$A\in\{0,1\}^{N,N}$，其子图连接如下图所示。
+
+![子图连接样例](/up/20220305/5.png)
+
+进一步，抽取单一类型$|\mathcal{D}|$的子图$\{\mathcal{G}^{(d)}=(\mathcal{V},\mathcal{E}^{(d)})\}$，可以使用稀疏矩阵存储。当然，这里的“设备”可以是一个广义的概念，也可以是IP地址、手机号、一个页面。实际使用中，其也是使用多中设备相关标识ID，基于这些图就可以观察到每个账号的活跃信息。任务的目标是基于时间$T$的数据学习一个函数$f({A^{d}, X})$来区分恶意账号和正常账号。
+
+### Modles
+
+基于恶意账号的设备聚集性和行为聚集性构造的包含多种节点类型的异构图，使用邻接矩阵$A$和节点特征$X$来学习能够将节点的特征及其拓扑结构进行函数的函数。
+
+得到的节点表示向量如下，其中$H^{t}\in\mathbb{R}^{N,k}$指第$t$层节点表示向量。这里不同类型的设备是使用平均的方式进行聚合的，与后面提到的结合注意力机制的不太一样。
+
+![节点表示过程](/up/20220305/6.png)
+
+模型训练是一个二分类问题，其损失函数就是标准的logisitc loss。
+
+![logistic loss](/up/20220305/7.png)
+
+### Attention Mechanism
+
+另外，为了动态的学习不同类型设备类型对节点表示的影响，模型引入了注意力机制。
+
+![注意力机制](/up/20220305/8.png)
+
+ ## EXPERIMENTS
+
+ ### Datasets
+
+ 实验数据使用的是支付宝的真实数据，为了预测每天新注册的账号，每天会构建一个包含过去七天账号和设备的图，首先剔除那些没有共用设备的账号，这部分账号是恶意账号的风险较低，剩下是数据即是要用到的数据。当然，为了证明模型的有效性，论文使用的是过去一个月的数据，数据的基本情况如下所示。数据被切分为四周，使用前6天的数据作为训练数据，用于预测每周最后的注册账号。数据具有一定敏感性，数据并不会揭示恶意账号和正常账号的比例情况等。特征方面主要是不同类型离散的时间维度上的行为记录共168维和200维账号相关统计特征及6维的设备类型标识特征。
+
+ ![数据情况](/up/20220305/9.png)
+
+### Experimental Settings
+
+实验评估部分，主要依靠支付宝已有的技术/经验对新注册账号的标记，基于此来衡量模型的F-1值和AUC，以及准确率和召回率。当然，这也是风控的尴尬处境，很难有有效的手段对账号数据进行准确无误的标记。实验对比的模型还包括了上文提到的连接子图、GBDT+Graph、GBDT+Node2Vec和GCN。
+
+### Results
+
+从下图的实验结果，F-1值和AUC，可以看到论文模型表现还是相当不错的。
+
+![实验结果](/up/20220305/10.png)
+
+论文进一步绘制了P-R曲线来对模型表现进行深入分析，也讨论了Embedding Size、模型层数、注意力机制以及设备类型对模型的影响，并作了线上实验落地。从实验结果看，论文模型都是有很好的效果。
+
+![P-R曲线](/up/20220305/11.png)
+
+## CONCLUSION
+
+本文根据实际场景中的恶意账号的特点，设备聚集和行为聚集性，设计了新的图神经网络，实验显示了模型的效果，且模型进行了落地实践。未来的研究方向可以朝基于实时动态图的恶意账号检测继续进行。
