fix: rename Proteins: ... to Proteins

--- a/_posts/2018-03-01-casp12-capri.md
+++ b/_posts/2018-03-01-casp12-capri.md
@@ -4,7 +4,7 @@ title:
 authors:
   Marc F. Lensink*, Sameer Velankar, Minkyung Baek, Lim Heo, Chaok Seok and
   Shoshana J. Wodak*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Applications and collaborations
 tags:
