--- a/_posts/2019-12-01-casp13-capri.md
+++ b/_posts/2019-12-01-casp13-capri.md
@@ -5,7 +5,7 @@ title:
 authors:
   Marc F. Lensink* et al. (Minkyung Baek, Taeyong Park, Hyeonuk Woo and
   Chaok Seok)
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Applications and collaborations
 tags:
