--- a/_posts/2019-12-01-casp13.md
+++ b/_posts/2019-12-01-casp13.md
@@ -1,7 +1,7 @@
 ---
 title: "Prediction of protein oligomer structures using GALAXY in CASP13"
 authors: Minkyung Baek, Taeyong Park, Hyeonuk Woo and Chaok Seok*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Protein structure prediction
 tags:
