--- a/_posts/2020-08-01-capri-38_45.md
+++ b/_posts/2020-08-01-capri-38_45.md
@@ -3,7 +3,7 @@ title:
   "Structure prediction of biological assemblies using GALAXY in CAPRI rounds
   38-45"
 authors: Taeyong Park, Hyeonuk Woo, Minkyung Baek, Jinsol Yang and Chaok Seok*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Protein structure prediction
 tags:
