--- a/_posts/2021-12-01-casp14-capri.md
+++ b/_posts/2021-12-01-casp14-capri.md
@@ -5,7 +5,7 @@ title:
 authors:
   Marc F. Lensink* et al. (Taeyong Park, Hyeonuk Woo, Jinsol Yang,
   Sohee Kwon, Jonghun Won and Chaok Seok)
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Applications and collaborations
 tags:
