--- a/_posts/2021-12-01-casp14.md
+++ b/_posts/2021-12-01-casp14.md
@@ -3,7 +3,7 @@ title: "Protein oligomer structure prediction using GALAXY in CASP14"
 authors:
   Taeyong Park, Hyeonuk Woo, Jinsol Yang, Sohee Kwon, Jonghun Won and Chaok
   Seok*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Protein structure prediction
 tags:
