--- a/_posts/2017-03-01-capri-30.md
+++ b/_posts/2017-03-01-capri-30.md
@@ -3,7 +3,7 @@ title:
   "Template-based modeling and ab initio refinement of protein oligomer
   structures using GALAXY in CAPRI round 30"
 authors: Hasup Lee, Minkyung Baek, Gyu Rie Lee, Sangwoo Park and Chaok Seok*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Protein structure prediction
 tags:
