--- a/_posts/2018-03-01-casp12.md
+++ b/_posts/2018-03-01-casp12.md
@@ -3,7 +3,7 @@ title:
   "Simultaneous refinement of inaccurate local regions and overall structure in
   the CASP12 protein model refinement experiment"
 authors: Gyu Rie Lee, Lim Heo, and Chaok Seok*
-journal: "Proteins: Structure, Function, and Bioinformatics"
+journal: Proteins
 categories:
   - Protein structure prediction
 tags:
