--- a/_posts/2023-07-25-ECM29.md
+++ b/_posts/2023-07-25-ECM29.md
@@ -1,12 +1,11 @@
 ---
 title:
-  "ECPAS/Ecm29-Mediated 26S Proteasome Disassembly is an Adaptive Response to Glucose Starvation"
+  "ECPAS/Ecm29-mediated 26S proteasome disassembly is an adaptive response to glucose starvation"
 authors: Won Hoon Choi et al. (Seho Lee, Jiho Sim and Chaok Seok)
 journal: Cell Reports
 categories:
   - Applications and collaborations
 tags:
   - with experimentalists
-redirect_to: https://doi.org/10.1101/2022.06.06.495046
-accepted_in: 2023-06-09
+redirect_to: https://doi.org/10.1016/j.celrep.2023.112701
 ---
