docs: 时序逻辑电路

--- a/_posts/2023-10-11-CH2 数字逻辑基础.md
+++ b/_posts/2023-10-11-CH2 数字逻辑基础.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CH3 组合逻辑电路
+title: CH2 数字逻辑基础
 categories: LectureNotes
 tags: [数字逻辑与计算机组成]
 ---
@@ -347,3 +347,11 @@ Con：没有规律，技巧性很强，难以判断是否最简。
 更一般地：
 
 ![image-20231011112647132](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231011112647132.png)
+
+这里的意思是：任何两级电路，在两级中间加两个反相门，然后中间切一刀，两组反相门归到上一级和下一级，再进行化简（等效）。
+
+**这样做的好处是可以用与非门代替与门，或非门代替或门，从而降低（底层）逻辑门层级数量，实现提速。**
+
+然而需要注意的是，图中是一种较为理想的情况，我们把所有与门/非门都进行了替换，然而如果第一级有与非门，则替换后它会变成与门，**这指出这种方法不能保证一定提速。**
+
+暂时我们不用考虑上述复杂的情况。
