--- a/_posts/2023-09-01-金融大数据处理技术笔记.md
+++ b/_posts/2023-09-01-金融大数据处理技术笔记.md
@@ -3,9 +3,9 @@ layout: post
 title: 金融大数据处理技术笔记
 subtitle: FBDP
 categories: LectureNotes
+tags: FBDP
+banner: "/assets/images/banners/toho.jpeg"
 ---
-
-# 金融大数据处理技术
 
 ## CH1 大数据
 
