--- a/_posts/2023-09-01-金融大数据处理技术笔记.md
+++ b/_posts/2023-09-01-金融大数据处理技术笔记.md
@@ -730,3 +730,256 @@ BigTable数据存储格式：
 ![image-20230925160703085](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20230925160703085.png)
 
 ![image-20230925160707450](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20230925160707450.png)
+
+## CH5 Hadoop基本架构
+
+### Hadoop平台的基本组成与生态系统
+
+Hadoop是一个开源分布式计算平台，为用户提供了系统底层细节透明的分布式基础架构。
+
+Hadoop是基于Java语言开发的，具有很好的跨平台特性，并且可以部署在廉价的计算机集群中。
+
+Hadoop的核心是分布式文件系统HDFS（Hadoop Distributed File System）和MapReduce。
+
+#### Hadoop特性
+
+可靠、高效、可伸缩
+
+* 高可靠性
+* 高效性
+* 高可扩展性
+* 高容错性
+* 成本低
+* 运行在Linux平台上
+
+* 支持多种编程语言
+
+#### 基本组成与生态系统
+
+![image-20231013082107625](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013082107625.png)
+
+![image-20231013082135903](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013082135903.png)
+
+![image-20231013082147800](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013082147800.png)
+
+### 分布式文件系统HDFS
+
+HDFS模仿Google GFS设计实现。
+
+#### HDFS基本特征
+
+* 存储极大数目的信息/极大的单个文件
+* 提供数据的高可靠性和容错能力
+* 提供对数据的快速访问
+* ……
+
+#### HDFS基本构架
+
+![image-20231013082637528](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013082637528.png)
+
+HDFS的主要组件有NameNode，DataNode。
+
+![image-20231013082758182](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013082758182.png)
+
+用一个表来直观展示它们的功能：
+
+| NameNode                                | DataNode                                   |
+| --------------------------------------- | ------------------------------------------ |
+| 存储元数据                              | 存储文件内容                               |
+| 元数据保存在内存中                      | 文件内容保存在磁盘                         |
+| 保存文件，block，datanode之间的映射关系 | 维护了block id到datanode本地文件的映射关系 |
+
+NameNode充当了HDFS的主节点，负责元数据管理，DataNode充当了多个从节点，负责数据的存储和处理，而SecondaryNameNode是辅助节点，用于辅助主要的NameNode在元数据管理方面。这种架构模式有助于实现HDFS的可伸缩性、容错性和负载均衡。
+
+##### NameNode
+
+这是NameNode的目录结构：
+
+![image-20231009234817222](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231009234817222.png)
+
+在HDFS中，名称节点（NameNode）负责管理分布式文件系统的命名空间（Namespace），记录了每个文件中各个块所在的数据节点的位置信息，**保存了两个核心的数据结构，即FsImage和EditLog。**其中：
+
+* **FsImage用于维护文件系统树以及文件树中所有的文件和文件夹的元数据**。
+
+  FsImage文件包含文件系统中所有目录和文件inode的序列化形式。每个inode是一个文件或目录的元数据的内部表示。
+
+* **操作日志文件EditLog中记录了所有针对文件的创建、删除、重命名等操作**
+
+###### 启动过程
+
+* 在名称节点启动的时候，它会将FsImage文件中的内容加载到内存中，之后再执行EditLog文件中的各项操作，使得内存中的元数据和实际的同步，存在内存中的元数据支持客户端的读操作。
+* 一旦在内存中成功建立文件系统元数据的映射，则创建一个新的FsImage文件和一个空的EditLog文件。
+* 名称节点起来之后，HDFS中的更新操作会重新写到EditLog文件中，因为FsImage文件一般都很大（GB级别的很常见），如果所有的更新操作都往FsImage文件中添加，这样会导致系统运行的十分缓慢，但是，如果往EditLog文件里面写就不会这样，因为EditLog 要小很多。每次执行写操作之后，且在向客户端发送成功代码之前，edits文件都需要同步更新。
+
+###### 名称节点运行期间EditLog不断变大的问题
+
+**在名称节点运行期间，HDFS的所有更新操作都是直接写到EditLog中，久而久之， EditLog文件将会变得很大。**
+
+虽然这对名称节点运行时候是没有什么明显影响的，但是，当名称节点重启的时候，名称节点需要先将FsImage里面的所有内容映像到内存中，然后再一条一条地执行EditLog中的记录，当EditLog文件非常大的时候，会导致名称节点启动操作非常慢，而在这段时间内HDFS系统处于安全模式，一直无法对外提供写操作，影响了用户的使用。
+
+##### SecondaryNameNode
+
+SecondaryNameNode本质上是NameNode的备份，NameNode也可以看作是FirstNameNode。
+
+SecondaryNameNode的目录结构：
+
+![image-20231009235420268](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231009235420268.png)
+
+SecondaryNameNode是HDFS架构中的一个组成部分，**它是用来保存名称节点（NameNode）中对HDFS元数据信息的备份**，并减少名称节点重启的时间。SecondaryNameNode一般是单独运行在一台机器上。
+
+工作流程：
+
+* SecondaryNameNode会定期和NameNode通信
+* 从NameNode上获取到FsImage和EditLog文件，并下载到本地的相应目录下
+* 执行EditLog和FsImage文件合并
+* 将新的FsImage文件发送到NameNode节点上
+* NameNode使用新的FsImage和EditLog（缩小了）
+
+![image-20231009235755198](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231009235755198.png)
+
+第二名称节点用途：
+
+* 不是热备份
+* **主要是防止日志文件EditLog过大，导致名称节点失败恢复时消耗过多时间**（主要）
+* 附带起到冷备份功能
+
+#### HDFS命名空间管理
+
+HDFS的命名空间包含目录、文件和块。
+
+在HDFS1.0体系结构中，在整个HDFS集群中只有一个命名空间，并且只有唯一一个名称节点，该节点负责对这个命名空间进行管理。
+
+HDFS使用的是传统的分级文件体系，因此，用户可以像使用普通文件系统一样，创建、删除目录和文件，在目录间转移文件，重命名文件等。
+
+#### HDFS通信协议
+
+所有的HDFS通信协议都是构建在TCP/IP协议基础之上的。
+
+客户端通过一个可配置的端口向名称节点主动发起TCP连接，并使用客户端协议与名称节点进行交互。
+
+名称节点和数据节点之间则使用数据节点协议进行交互。
+
+客户端与数据节点的交互是通过RPC（Remote Procedure Call）来实现的。在设计上，名称节点不会主动发起RPC，而是响应来自客户端和数据节点的RPC请求。
+
+#### HDFS数据存取
+
+![image-20231013084002400](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084002400.png)
+
+![image-20231013084040967](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084040967.png)
+
+##### 数据存放
+
+* 第一个副本：放置在上传文件的数据节点；如果是集群外提交，则随机挑选一台磁盘不太满、CPU不太忙的节点
+* 第二个副本：放置在与第一个副本不同的机架的节点上
+* 第三个副本：与第一个副本相同机架的其他节点上
+* 更多副本：随机节点
+
+##### 数据读取
+
+HDFS提供了一个API可以确定一个数据节点所属的机架ID，客户端也可以调用API获取自己所属的机架ID（Rack Awareness）。
+
+当客户端读取数据时，从名称节点获得数据块不同副本的存放位置列表，列表中包含了副本所在的数据节点，可以调用API来确定客户端和这些数据节点所属的机架ID，**当发现某个数据块副本对应的机架ID和客户端对应的机架ID相同时，就优先选择该副本读取数据**，如果没有发现，就随机选择一个副本读取数据。
+
+![image-20231013084406753](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084406753.png)
+
+![image-20231013084418638](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084418638.png)
+
+![image-20231013084651717](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084651717.png)
+
+![image-20231013084659657](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084659657.png)
+
+#### HDFS可靠性与出错恢复
+
+![image-20231013084720574](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013084720574.png)
+
+##### NameNode出错
+
+###### 备份（SecondaryNameNode）
+
+对于NameNode，HDFS设置了备份机制，把这些核心文件同步复制到备份服务器SecondaryNameNode上。当名称节点出错时，就可以根据备份服务器SecondaryNameNode中的FsImage和Editlog数据进行恢复。
+
+###### 高可用性（HA）
+
+HDFS HA（High Availability）是为了解决**单点故障**问题。
+
+在Hadoop 2.x以后的版本中，HA集群设置两个名称节点，活跃（Active）和待命（Standby）。两种名称节点的状态同步，可以借助于一个共享存储系统来实现。一旦活跃名称节点出现故障，就可以立即切换到待命名称节点。
+
+![image-20231010000905713](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231010000905713.png)
+
+##### DataNode出错
+
+###### 数据复制
+
+HDFS会将每个文件的数据块在多个DataNode上进行复制存储，默认情况下，每个数据块会有三个副本。这样，即使某个DataNode发生故障，文件的数据仍然可以从其他DataNode上的副本中访问到。
+
+###### 心跳检测
+
+NameNode会定期向所有DataNode发送心跳信号，如果一段时间内没有收到某个DataNode的心跳信号，NameNode就会认为这个DataNode发生了故障，然后会将这个DataNode上的数据块的副本重新分配到其他DataNode上，以保证数据的可用性和可靠性。
+
+###### 数据一致性和校验和（Checksum）
+
+HDFS通过使用校验和来保证数据的一致性。
+
+当数据写入HDFS时，会在客户端计算每个数据块的校验和，并将校验和和数据块一起存储在DataNode上。
+
+当数据从HDFS读取时，会在客户端重新计算数据块的校验和，并与存储在DataNode上的校验和进行比较，如果两者不一致，说明数据在传输过程中可能发生了错误，客户端可以请求从其他DataNode上读取数据块的其他副本。
+
+通过这种方式，HDFS可以在一定程度上保证数据的一致性和可靠性。
+
+##### HDFS纠删码（EC）
+
+EC，是一种编码容错技术。最早用于通信行业，数据传输中的数据恢复。它通过对数据进行分块，然后计算出校验数据，使得各个部分的数据产生关联性。**当一部分数据块丢失时，可以通过剩余的数据块和校验块计算出丢失的数据块。**
+
+![image-20231013085131005](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013085131005.png)
+
+![image-20231013085142838](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013085142838.png)
+
+* 优势：节约存储空间
+* 劣势：
+  * 网络带宽的消耗，因为数据恢复需要去读其他的数据块和校验块
+  * 进行编码，解码计算需要消耗CPU资源
+* 最好的选择是用于冷数据集群
+  * 冷数据集群往往有大量的长期没有被访问的数据，体量确实很大，采用EC技术，可以大大减少副本数
+  * 冷数据集群基本稳定，耗资源量少，所以一旦进行数据恢复，将不会对集群造成大的影响
+
+
+![image-20231013085336249](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013085336249.png)
+
+![image-20231013085349401](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013085349401.png)
+
+### YARN：新一代Hadoop架构
+
+第二代Hadoop引入了YARN作为资源管理工具。
+
+#### 理念
+
+**YARN的目标就是实现“一个集群多个框架” ，即在一个集群上部署一个统一的资源调度管理框架YARN，在YARN之上可以部署其他各种计算框架。**
+
+YARN的优势在于：
+
+* 由YARN为这些计算框架提供统一的资源调度管理服务。
+* 且能够根据各种计算框架的负载需求，调整各自占用的资源，实现集群资源共享和资源弹性收缩。
+* 可以实现一个集群上的不同应用负载混搭，有效提高了集群的利用率。
+* 不同计算框架可以共享底层存储，避免了数据集跨集群移动。
+
+YARN实现了：
+
+* 更高的集群利用率，一个框架未使用的资源可由另一个框架进行使用，充分的避免资源浪费。
+* 在新的Yarn中，通过加入ApplicationMaster是一个可变更的部分，用户可以针对不同的编程模型编写自己的ApplicationMaster，让更多的编程模型运行在Hadoop集群中。
+* 在上一版框架中，JobTracker一个很大的负担就是监控Job的tasks运行情况，现在，这个部分下放到了ApplicationMaster中它的思路主要是：将原来的JobTracker三大功能拆分。
+
+#### 实现方式
+
+* Yet Another Resource Negotiator：另一种资源协调者。它是一个**通用资源管理系统，可为上层应用提供统一的资源管理和调度**，它的引入为集群在利用率、资源统一管理和数据共享等方面带来了巨大好处。
+* ResourceManager (RM)**全局管理所有应用程序计算资源的分配**，每个应用的ApplicationMaster (*AM*)负责相应的调度和协调。
+* 一个应用程序无非是一个单独的传统的 MapReduce 任务或者是一个 DAG（有向无环图）任务。ResourceManager和每一台机器的节点管理服务器能够管理用户在那台机器上的进程并能对计算进行组织。
+
+![image-20231010002116788](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231010002116788.png)
+
+![image-20231010002127644](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231010002127644.png)
+
+![image-20231010002153685](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231010002153685.png)
+
+#### Hadoop MapReduce基本工作过程
+
+![image-20231013085527475](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231013085527475.png)
