--- a/_posts/2023-11-14-CH6 运算方法.md
+++ b/_posts/2023-11-14-CH6 运算方法.md
@@ -11,13 +11,13 @@ tags: [数字逻辑与计算机组成]
 
 ### 串行进位加法器
 
-![image-20231114104333885](/Users/dragonk/Library/Application Support/typora-user-images/image-20231114104333885.png)
+![image-20231114104333885](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114104333885.png)
 
 就是若干个全加器的串联。
 
 ### 并行进位加法器
 
-![image-20231114104827541](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231114104827541.png)
+![image-20231114104827541](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114104827541.png)
 
 将两个加数送进FA，并行产生$P_{i},G_{i}$，然后将它们送入4位ALU，并行产生$C_{i}$，然后送回FA产生最终结果$F_{i}$。
 
@@ -25,11 +25,11 @@ tags: [数字逻辑与计算机组成]
 
 **组内并行，组间串行：**
 
-![image-20231114105117224](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231114105117224.png)
+![image-20231114105117224](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114105117224.png)
 
 **16位两级先行进位加法器**
 
-![image-20231114105309746](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231114105309746.png)
+![image-20231114105309746](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114105309746.png)
 
 ### 算术逻辑部件ALU
 
@@ -88,6 +88,8 @@ $$
 
 原码作为浮点数尾数的表示形式，需要计算机能实现定点原码小数的乘法运算。根据每次部分积是一位相乘得到还是两位相乘得到，有**原码一位乘法**和**原码两位乘法**；推广有原码多位乘法。
 
+**当我们谈到原码/补码的时候，我们是在谈论有符号数的运算。**
+
 #### 原码乘法运算
 
 用原码实现乘法运算时，符号位与数值位分开计算。因此，一位乘法的描述如下：
@@ -141,3 +143,80 @@ $$
 ![image-20231114213846135](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114213846135.png)
 
 ![image-20231114213852908](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231114213852908.png)
+
+### 定点数除法运算
+
+基本上同手算除法的思路一样。
+
+由于除法的特性，必须做**除前预处理**：当被除数和除数都≠ 0，且商≠ 0时，才进一步进行除法运算。
+
+此外我们还需要区分定点小数与定点整数的除法：
+
+* 定点正整数（即无符号数 ）相除：在被除数的高位添n个0
+* 定点正小数（即原码小数）相除：在被除数的低位添加n个0
+
+这样，就将所有情况都统一为：一个2n位数除以一个n位数。
+
+然后还需要注意：**n位除法需要n+1步**。
+
+#### 无符号数除法运算
+
+![image-20231117144356808](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117144356808.png)
+
+##### 恢复余数法
+
+![image-20231117144409251](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117144409251.png)
+
+* 写的时候数一下：一共要sl R 5次。
+
+* 需要注意：最后一步余数寄存器需要向右移动一位（并且不移动到商的地方）
+
+但是这种方法很麻烦，所以一般采用：
+
+##### 不恢复余数法
+
+![image-20231117145814310](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117145814310.png)
+
+* 下一次加什么由上一次加完后R的符号位决定。
+* 最后一次只需要移动商的部分（左移），不需要移动余数！
+
+#### 有符号数除法运算
+
+和无符号数除法运算类似，也有**恢复余数法**和**加减交替法**，但是结合实际，只介绍加减交替法。
+
+##### 原码除法
+
+复习一下原码表示：最高位表符号位，低位的所有表其绝对值的真值。
+
+原码除法的思想是：
+
+* 符号位和数值位分开处理：
+  * 商的数值部分由无符号数除法求得
+  * 商符由被除数和除数的符号确定：同号为0，异号为1
+* 余数的符号同被除数的符号
+
+举例：
+
+![image-20231117151353604](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117151353604.png)
+
+这里由于是小数运算所以在低位补了0，注意整数是在高位补0。
+
+一开始的右边是空的，是因为认为n位除n位永远不会溢出，先行左移了1位。
+
+##### 补码除法
+
+思想：
+
+* 直接用补码除法，符号和数值一起进行运算，商符直接在运算中产生
+
+![image-20231117151643112](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117151643112.png)
+
+补码运算的不恢复余数法要点：
+
+![image-20231117151718129](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117151718129.png)
+
+**尤其要注意最后商和余数的修正，这是两个独立的过程。**
+
+举例：
+
+![image-20231117151841743](https://repo-for-md.oss-cn-beijing.aliyuncs.com/img/image-20231117151841743.png)
