--- a/_posts/2023-09-01-金融大数据处理技术笔记.md
+++ b/_posts/2023-09-01-金融大数据处理技术笔记.md
@@ -971,7 +971,7 @@ YARN实现了：
 #### 实现方式
 
 * Yet Another Resource Negotiator：另一种资源协调者。它是一个**通用资源管理系统，可为上层应用提供统一的资源管理和调度**，它的引入为集群在利用率、资源统一管理和数据共享等方面带来了巨大好处。
-* ResourceManager (RM)**全局管理所有应用程序计算资源的分配**，每个应用的ApplicationMaster (*AM*)负责相应的调度和协调。
+* ResourceManager (RM）**全局管理所有应用程序计算资源的分配**，每个应用的ApplicationMaster (*AM*)负责相应的调度和协调。
 * 一个应用程序无非是一个单独的传统的 MapReduce 任务或者是一个 DAG（有向无环图）任务。ResourceManager和每一台机器的节点管理服务器能够管理用户在那台机器上的进程并能对计算进行组织。
 
 ![image-20231010002116788](https://repo-for-md.oss-cn-beijing.aliyuncs.com/uPic/image-20231010002116788.png)
