--- a/_posts/2024-03-19-Leetcode 930.BinarySubarraysWithSum.md
+++ b/_posts/2024-03-19-Leetcode 930.BinarySubarraysWithSum.md
@@ -2,9 +2,14 @@
 layout: post
 title: Leetcode 930.BinarySubarraysWithSum
 subtitle: Leetcode 930.BinarySubarraysWithSum
+excerpt_image: test.jpg
 categories: leetcode
 tags: [leetcode]
 ---
+
+
+
+> [소스코드](https://github.com/leechoongyon/coding-test-kotlin/blob/main/src/main/kotlin/org/example/leetcode/Num930.kt)
 
 
 
